Logo changed to elab, feedback line color set, bars added, menu align corrected

--- a/app/assets/sass/_control-bar.sass
+++ b/app/assets/sass/_control-bar.sass
@@ -44,6 +44,7 @@
     @include flex
     justify-content: flex-start
     width: 17%
+    height: 30%
     .control
       fill: $secondarycolor
       margin-right: .2em
