--- a/app/assets/sass/_header.sass
+++ b/app/assets/sass/_header.sass
@@ -18,10 +18,10 @@
     align-items: center
     .text_educalab
       font-weight: lighter
-      margin-right: 1em
+      margin-right: .8em
       padding-top: .3em
     .educalab_logo
-      width: 8em
+      width: 4em
       //@include hand_cursor
 
 
@@ -44,7 +44,7 @@
       .text_educalab
         font-size: .6em
       .educalab_logo
-        width: 4em
+        width: 2em
 
 @media (max-width: 736px) and (orientation: landscape)
 
@@ -59,16 +59,12 @@
     .pass_check_logo
       width: 6em
     .educalab
-      @include column-flex
-      justify-content: center
-      align-items: none
       .text_educalab
         font-size: .5em
-        margin: 0
-        padding: 0
-        margin-bottom: .2em
+        margin: 0 1em 0 0
+        padding-top: .5em
       .educalab_logo
-        width: 4em
+        width: 2em
      
 
 
