--- a/app/assets/sass/_main-box.sass
+++ b/app/assets/sass/_main-box.sass
@@ -3,9 +3,11 @@
 //----------- MAIN BOX ----------------
 
 .main_box
-  height: calc(100vh - 23.5em)
+  height: calc(100vh - 23em)
   background-color: white
   overflow: auto
+  &.with_feedback
+    height: calc(100vh - 31em)
   .main_text
     color: $secondarycolor
     font-size: calc(5.5vh + 2em)
