--- a/app/assets/sass/_main_input.sass
+++ b/app/assets/sass/_main_input.sass
@@ -27,6 +27,9 @@
         margin-right: 1em
         margin-top: .3em
         font-size: 2em
+        .control
+          &.open
+            fill: rgb(0,0,0)
 
     .check_box
       @include flex
@@ -42,11 +45,41 @@
         fill: rgb(0,0,0)
         @include transition (all 300ms cubic-bezier(0.4, 0, 0.2, 1))
 
+  .bar_box
+    width: 100%
+    height: .5em
+    margin-top: .4em
+    .bars
+      width: 100%
+      height: 100%
+      margin: 0
+      @include flex
+      justify-content: space-between
+      .bar
+        height: 100%
+        width: 4.5%
+        background-color: $maincolor
+        opacity: .5
+        &.fill
+          opacity: 1
+
   .character_box
     font-weight: 600
     padding: 1em
     & > span
       margin-right: 2em
+
+  .password_feedback
+    font-size: calc(3vw + .7em)
+    font-weight: 900
+    text-align: center
+    margin-bottom: .4em
+    &.secure
+      color: $green
+    &.medium
+      color: $orange
+    &.weak
+      color: $red
 
 .pass_info
   color: $maincolor
