--- a/app/assets/sass/_temporal.sass
+++ b/app/assets/sass/_temporal.sass
@@ -1,5 +1,3 @@
-body 
-  background-color: white
 
 #heading 
   font-size: 30px
